--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  margin-bottom: 10rem;
   margin-left: 10rem;
   margin-right: 10rem;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -26,24 +27,14 @@ body {
 * {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  color: white;
 }
 
 
 
-
-/* input text field */
-.input-text-field label,
-.input-text-field label.Mui-focused {
-  color: white
-}
-
-
-/* .input-text-field:focus-within fieldset,
-.input-text-field:focus-visible fieldset {
-  border: 1.5px solid white !important;
-} */
-
-
-.MuiTabs-indicator {
-  display: none;
+/* dialog btn (BtnDeleteAccount) */
+.MuiDialog-paper {
+  height: max-content;
+  color : white;
+  width: 100%;
 }
